# python-project-template4LLM

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: python-app.yml
